Masonry Layout Solution

--- a/course2/masonry-layout-challenge/index.html
+++ b/course2/masonry-layout-challenge/index.html
@@ -1,1 +1,54 @@
-<!--Write the html code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Masonry Layout with CSS Floats</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+</head>
+<body> 
+         <div class="col">
+            <div class="block height-59"></div>
+            <div class="block height-143"></div>
+            <div class="block height-157"></div>
+         </div>
+
+         <div class="col">
+            <div class="block height-59"></div>
+            <div class="block height-35"></div>
+            <div class="block height-143"></div>
+            <div class="block height-75"></div>
+            <div class="block height-35"></div>
+            <div class="block height-143"></div>
+            <div class="clear"></div>
+         </div>
+
+        <div class="col">
+            <div class="block height-85"></div>
+            <div class="block height-140"></div>
+            <div class="block height-110"></div>
+        </div>
+
+        <div class="col">
+            <div class="block height-100"></div>
+            <div class="block height-200"></div>
+            <div class="block height-190"></div>
+        </div>
+        
+        <div class="col">
+            <div class="block height-130"></div>
+            <div class="block height-200"></div>
+            <div class="block height-50"></div>
+            <div class="block height-180"></div>
+        </div>
+
+        <div class="col">
+            <div class="block height-65"></div>
+            <div class="block height-120"></div>
+            <div class="block height-60"></div>
+            <div class="block height-110"></div>
+            <div class="block height-120"></div>
+        </div>
+        
+</body>
+</html>
